🐛 FIX: Fix spacing for "Visit the news hub"

--- a/_/sass/_news.scss
+++ b/_/sass/_news.scss
@@ -57,6 +57,9 @@
 	font-size: 16px;
 	line-height: 22px;
 }
+.author .page-news {
+	padding-top: 25px;
+}
 .author-block {
 	border-bottom: 1px solid #e0e0e0;
 	padding-bottom: 45px;
